--- a/app.css
+++ b/app.css
@@ -12,3 +12,13 @@
     border-top: 1px solid black;  
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.below100 {
+    color: red;
+
+}
